# hh-vacancies-project

./: README.md  main.py  pyproject.toml
src/: config.py  create_db.py  db_manager.py  hh_api.py  user_interface.py
tests/: test_create_db.py  test_db_manager.py  test_hh_api.py
